--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,6 +21,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PRIVATE_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
         port: 3000
         script: |
           cd ~/home/noventa-grados
