--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,7 +22,10 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PRIVATE_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
-        port: 3000
+        port: 22
         script: |
-          whoami
-          ls -al
+          cd ~/noventa-grados
+          git pull origin master
+          git status
+          npm build
+          pm2 restart noventa-app
