--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,9 +2,10 @@ name: Node.js CD
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -15,19 +16,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Deploy using ssh
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        port: 22
-        script: |
-          whoami
-          ls -al
-          cd noventa-grados
-          git pull origin main
-          git status
-          npm run build
-          pm2 restart noventa-app
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          port: 22
+          script: |
+            whoami
+            ls -al
+            cd noventa-grados
+            # Use the passphrase for git pull
+            ssh-agent bash -c 'ssh-add - <<< "${{ secrets.PASSPHRASE }}" && git pull origin main'
+            git status
+            npm run build
+            pm2 restart noventa-app
