--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,20 +12,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup SSH Keys and known_hosts
-        env:
-            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: |
-            mkdir -p ~/.ssh
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-            ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
 
-      - name: Some task that fetches dependencies
-        env:
-              SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: ./fetch-deps.sh
-    
       - name: Deploy using SSH
         uses: appleboy/ssh-action@master
         with:
@@ -36,4 +23,4 @@ jobs:
           port: 22
           script: |
             cd noventa-grados
-            git pull
+            git pull origin main
