--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -11,15 +11,21 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
-
-      - name: Copiar el contenido del repositorio con scp
-        uses: appleboy/scp-action@master
+        uses: actions/checkout@v2
+      
+      - name: Authenticate with GitHub via SSH
+        run: ssh -T git@github.com
         env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: 22
-          KEY: ${{ secrets.SSHKEY }}
+          GIT_SSH_COMMAND: "ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+  
+      - name: Deploy using SSH
+        uses: appleboy/ssh-action@master
         with:
-          source: "site/*"
-          target: "/var/www/html"
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          port: 22
+          script: |
+            cd noventa-grados
+            git pull origin main
