--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,6 +15,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        node-version: '20.3.0'
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
