--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,5 +26,4 @@ jobs:
           cd /var/www/noventa-grados
           git pull origin main
           git status
-          npm run build
-          pm2 restart noventa-app
+          npm run start:dev
