--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,4 +26,5 @@ jobs:
           cd /var/www/noventa-grados
           git pull origin main
           git status
-          npm run start:dev
+          npm run build
+          pm2 restart noventa-app
