--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,7 +26,6 @@ jobs:
           cd /var/www/noventa-grados
           git pull origin main
           git status
-          node --version
-          ls -la
+          npm install
           npm run build
           pm2 restart noventa-app
