--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^10.2.4",
+    "@nestjs/config": "^3.0.1",
+    "@nestjs/core": "^10.2.4",
+    "@nestjs/platform-express": "^10.2.4",
+    "@nestjs/platform-socket.io": "^10.2.4",
+    "@nestjs/websockets": "^10.2.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.1.17",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.4",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
